[project]
name = "rentalradar-api"
version = "0.1.0"
description = "FastAPI backend for RentalRadar.ai"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "redis>=5.0",
  "celery[redis]>=5.4",
  "playwright>=1.45",
  "cryptography>=42.0",
  "httpx>=0.27",
  "tenacity>=8.4",
  "stripe>=11.0",
]

[project.optional-dependencies]
agents = [
  "langgraph>=0.2",
]
dev = [
  "ruff>=0.5",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
]

[tool.ruff]
line-length = 100
target-version = "py311"
